flux/sensors-report-explorer/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors-report-explorer-test
  labels:
    app: sensors-report-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensors-report-explorer
  template:
    metadata:
      labels:
        app: sensors-report-explorer
    spec:
      containers:
        - name: sensors-report-explorer
          image: viobiscu/sensors-report-explorer:dev
          ports:
            - containerPort: 5000
