flux/sensors-report-explorer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors-report-explorer
  labels:
    app: sensors-report-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensors-report-explorer
  template:
    metadata:
      labels:
        app: sensors-report-explorer
    spec:
      containers:
        - name: sensors-report-explorer
          image: viobiscu/sensors-report-explorer:latest
          ports:
            - containerPort: 80
            - containerPort: 5000
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    if command -v apt-get >/dev/null 2>&1; then apt-get update && apt-get install -y iputils-ping curl; fi
                    if command -v apk >/dev/null 2>&1; then apk add --no-cache iputils curl; fi
