flux/sensors-report-explorer/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors-report-explorer-frontend
  labels:
    app: sensors-report-explorer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensors-report-explorer-frontend
  template:
    metadata:
      labels:
        app: sensors-report-explorer-frontend
    spec:
      containers:
        - name: sensors-report-explorer-frontend
          image: viobiscu/sensors-report-explorer-frontend:latest
          ports:
            - containerPort: 80
