flux/sensors-report-explorer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensors-report-explorer
spec:
  selector:
    app: sensors-report-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
